--- a/examples/example 2 - SpriteSheet/index.html
+++ b/examples/example 2 - SpriteSheet/index.html
@@ -12,7 +12,7 @@
 	<script src="../../lib/pixi.dev.js"></script>
 </head>
 <body>
-	<script src="app.js"></script>
+	<script src="Example2A.js"></script>
 
 </body>
 </html>
