--- a/examples/example 3 - MovieClip/index.html
+++ b/examples/example 3 - MovieClip/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>pixi.js example 2 loading a sprite sheet</title>
+	<title>pixi.js example 3 using a movieclip</title>
 	<style>
 		body {
 			margin: 0;
@@ -9,9 +9,9 @@
 			background-color: #000000;
 		}
 	</style>
-	<script src="../../../lib/pixi.dev.js"></script>
+	<script src="../../lib/pixi.dev.js"></script>
 </head>
 <body>
-	<script src="Example2B.js"></script>
+	<script src="Example3.js"></script>
 </body>
 </html>
